# RubiksCube

./: CMakeLists.txt  README.md
DisplayGLFW/: display.cpp  display.h
Engine3D/: MovableGLM.cpp  MovableGLM.h  renderer.cpp  resource.h  scene.cpp  scene.h  stb_image.c
RubiksCube/: CmakeLists.txt  InputManager.h  MyCube.cpp  MyCube.h  Wall.cpp  Wall.h  main.cpp  rubikscube.cpp  rubikscube.h
res/includes/glm/gtc/: matrix_transform.inl
res/shaders/: basicShaderTex.glsl  pickingShader2.glsl  pickingShader2.vs
